--- a/css/style.css
+++ b/css/style.css
@@ -969,11 +969,10 @@ footer {
     }
 
     .adhoc .card {
-        min-width: 11%;
-        height: 28vh;
+        min-height: 28vh;
         width: 16%;
         margin: 10vh 5vw;
-        padding-top: 10vh;
+        padding-top: 0vh;
         padding-bottom: 0vh;
         padding-left: 2vw;
         padding-right: 2vw;
@@ -986,13 +985,10 @@ footer {
     }
 
     .card img {
+        width: 22vh;
+        height: 22vh;
+        margin: 5vh auto;
         border-radius: 50%;
-        position: absolute;
-        left: 26%;
-        top: -60px;
-        width: 14vh;
-        height: 14vh;
-        margin: 0 auto;
         border: #2948ff 5px solid;
         box-shadow: 7px 15px 37px -12px rgba(0,0,0,0.75);
         -moz-box-shadow: 7px 15px 37px -12px rgba(0,0,0,0.75);
