--- a/css/style.css
+++ b/css/style.css
@@ -969,9 +969,9 @@ footer {
     }
 
     .adhoc .card {
-        min-height: 28vh;
+        min-height: 2vh;
         width: 16%;
-        margin: 10vh 5vw;
+        margin: 5vh 5vw;
         padding-top: 0vh;
         padding-bottom: 0vh;
         padding-left: 2vw;
@@ -986,8 +986,8 @@ footer {
 
     .card img {
         width: 100%;
-        height: 225px;
-        margin: 5vh auto;
+        height: 22vh;
+        margin: 2.5vh auto;
         border-radius: 50%;
         border: #2948ff 5px solid;
         box-shadow: 7px 15px 37px -12px rgba(0,0,0,0.75);
@@ -1001,7 +1001,7 @@ footer {
 
     .card h2 {
         font-size: 2vh;
-        margin-bottom: 5vh;
+        margin-bottom: 2.5vh;
     }
 
     .card h3 {
