--- a/css/style_tc.css
+++ b/css/style_tc.css
@@ -60,3 +60,10 @@ td {
         padding-left : 6em;
     }
 }
+
+@media screen and (max-width: 720px) {
+
+    .each-day {
+        padding: 2px;
+    }
+}
